--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ disqus_shortname: dmc7337
 owner:
   name:           David McCormack
   avatar:         bio-photo.jpg
-  bio:            "Critical thinker who does stuff."
+  bio:            "Melbourne based more Dev than Ops techo."
   email:          dmc@7337.io
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: dmc7337
