--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            David McCormack's blog
 description:      Random thoughts on some DevOps fun I have had.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 # url:              http://localhost:4000
-url:              http://localhost/dmc7337
-# url:              http://dmc7337.github.io
+# url:              http://localhost/dmc7337
+url:              http://dmc7337.github.io
 disqus_shortname: dmc7337
 
 # Owner/author information
